fixed instrumentation agent launch